--- a/client/css/main.css
+++ b/client/css/main.css
@@ -1,10 +1,3 @@
-p {
-    font-size: 1.1em;
-    font-weight: 300;
-    line-height: 1.7em;
-    color: #999;
-}
-
 a, a:hover, a:focus {
     color: inherit;
     text-decoration: none;
@@ -17,7 +10,8 @@ a, a:hover, a:focus {
 }
 
 #content {
-    width: calc(100% - 250px);
+    padding: 20px;
+    width: calc(100% - 200px);
     height: calc(100vh - 56px);
     max-height: calc(100vh - 56px);
     transition: all 0.3s;
@@ -32,7 +26,7 @@ a, a:hover, a:focus {
 }
 
 #sidebar {
-    width: 250px;
+    width: 200px;
     position: fixed;
     top: 56px;
     left: 0;
@@ -47,7 +41,7 @@ a, a:hover, a:focus {
 }
 
 #sidebar.active {
-    margin-left: -250px;
+    margin-left: -200px;
 }
 
 #sidebar .sidebar-header {
@@ -70,8 +64,8 @@ a, a:hover, a:focus {
     display: block;
 }
 #sidebar ul li a:hover {
-    color: #065a92fa;
-    background:white;
+    color: white;
+    background: #618fadb0;
 }
 
 #sidebar ul li.active > a, a[aria-expanded="true"] {
@@ -114,6 +108,42 @@ pointer-events: none;
 color: #aaa;
 }
 
+.avatar {
+    vertical-align: middle;
+    width: 50px;
+    height: 50px;
+    border-radius: 40%;
+}
+
+.category-item {
+    text-align: center;
+    min-width: 100px;
+    min-height: 34px;
+    color: #065a92fa;
+}
+
+.category-item:hover {
+    background: #9fceeeb0;
+}
+
+.category-item.active { 
+    border-bottom: 3px solid #065a92fa;
+}
+
+.list-group-item {
+    padding: 10px;
+    min-height: 150px;
+}
+
+.post-list {
+    max-width: 80%;
+}
+
+.post-list-item {
+    display: inline-flex;
+    justify-content: space-between;
+}
+
 /* Media Queries (auto hide sidebars on smaller screen) */
 @media (max-width: 768px) {
     /* #sidebar {
@@ -126,6 +156,10 @@ color: #aaa;
         width: calc(100% - 250px);
     }
     */
+    .post-list {
+       max-width: 800px;
+    }
+    
     #content {
         width: 100%;
     }
