--- a/client/assets/css/style.css
+++ b/client/assets/css/style.css
@@ -20,8 +20,9 @@
   margin-right: 1.2%;
   background: #ffffff;
   border-radius: 4px;
-  margin: 0 auto;
-  padding: 0px 15px;
+  margin: 2em auto 0em;
+  z-index: 0;
+  padding: 13px 23px;
   cursor: pointer;
 }
 .my-card:not(:first-child) {
@@ -86,8 +87,39 @@
   text-decoration: underline;
 }
 
-.nav--content {
+.my-nav {
+  position: relative;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -ms-flex-align: center;
+  align-items: center;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  padding: 0.5rem 1rem;
+  position: relative;
+  border-bottom: solid 1px #ededed;
+}
+.my-nav .search-icon {
+  position: absolute;
+  left: 7.5em;
+  top: 1.9em;
+  color: #616161;
+}
+.my-nav--content {
   justify-content: space-around;
+}
+.my-nav.white {
+  background-color: #fff;
+}
+.my-nav--fixed {
+  position: fixed;
+  width: 100%;
+  z-index: 9;
+}
+.my-nav--big {
+  height: 13vh;
 }
 
 .searchbar {
@@ -147,6 +179,14 @@ body {
 
 .bg-white {
   background-color: #fff;
+}
+
+.color-red {
+  color: #e33012;
+}
+
+.fs-17 {
+  font-size: 17px;
 }
 
 /*# sourceMappingURL=style.css.map */
