--- a/client/assets/scss/_card.scss
+++ b/client/assets/scss/_card.scss
@@ -6,9 +6,11 @@
     margin-right: 1.2%;
     background: #ffffff;
     border-radius: 4px;
-    margin: 0 auto;
+    margin: 2em auto 0em;
 
-    padding: 0px 15px;
+    z-index: 0;
+
+    padding: 13px 23px;
 
     cursor: pointer;
 
