--- a/client/assets/scss/_card.scss
+++ b/client/assets/scss/_card.scss
@@ -1,21 +1,26 @@
 .my-card{
     position: relative;
     display: inline-block;
-    width: 75%;
+    width: 100%;
     height: auto;
     margin-right: 1.2%;
     background: #ffffff;
     border-radius: 4px;
     margin: 2em auto 0em;
 
+    &--border {
+        border: solid 1px #bdbdbd;
+    }
+
     z-index: 0;
-
     padding: 13px 23px;
-
-    cursor: pointer;
 
     &:not(:first-child) {
         margin-top: 1.2em;
+    }
+
+    &:last-child {
+        margin-bottom: 3.3em;
     }
 
     &:hover {
