--- a/client/assets/scss/_navbar.scss
+++ b/client/assets/scss/_navbar.scss
@@ -15,9 +15,9 @@
 
     .search-icon {
         position: absolute;
-        left: 7.5em;
-        top: 1.9em;
-        color: #616161;
+        left: 2.9em;
+        top: 0.7em;
+        color: #bdbdbd;
     }
     
     &--content { justify-content: space-around }
