Implement all release

--- a/client/assets/scss/_navbar.scss
+++ b/client/assets/scss/_navbar.scss
@@ -26,6 +26,10 @@
         background-color: #fff;
     }
 
+    &.black {
+        background-color: #38353c;
+    }
+
     &--fixed {
         position: fixed;
         width: 100%;
