--- a/client/assets/scss/_utility.scss
+++ b/client/assets/scss/_utility.scss
@@ -27,8 +27,12 @@ section{ min-height: 75vh }
         text-decoration: underline;
     }
 }
+.w-100 { width: 100%; }
 .bg-white{background-color: #fff;}
 .color-red { color: #e33012 }
 .color-grey4 { color: #616161 }
 .color-grey3 { color: #bdbdbd }
+.color-white {color: #fff }
 .fs-17{ font-size: 17px;}
+
+.ml-20 {margin-left: 20px;}
