--- a/client/assets/css/style.css
+++ b/client/assets/css/style.css
@@ -117,6 +117,9 @@
 .my-nav.white {
   background-color: #fff;
 }
+.my-nav.black {
+  background-color: #38353c;
+}
 .my-nav--fixed {
   position: fixed;
   width: 100%;
@@ -158,7 +161,7 @@
   transition: margin 0.25s ease-out;
 }
 .sidebar__heading {
-  padding: 0.875rem 2.1rem;
+  padding: 1.68rem 2.1rem;
   font-size: 1.2rem;
 }
 .sidebar .list-group {
@@ -217,6 +220,10 @@ section {
   text-decoration: underline;
 }
 
+.w-100 {
+  width: 100%;
+}
+
 .bg-white {
   background-color: #fff;
 }
@@ -233,8 +240,16 @@ section {
   color: #bdbdbd;
 }
 
+.color-white {
+  color: #fff;
+}
+
 .fs-17 {
   font-size: 17px;
+}
+
+.ml-20 {
+  margin-left: 20px;
 }
 
 /*# sourceMappingURL=style.css.map */
