--- a/client/css/imageUpload.css
+++ b/client/css/imageUpload.css
@@ -19,7 +19,7 @@ input[type="file"] {
     display: none !important;
   }
   
-  .hidden.image {
+  .hidden.finalimage {
     display: inline-block !important;
   }
   
