--- a/client/css/main.css
+++ b/client/css/main.css
@@ -12,12 +12,17 @@ a, a:hover, a:focus {
     padding: 5px;
     width: 30px;
     position: relative;
-    left: -20px;
-    z-index: 0;
+    top: 10px;
+    left: 0;
+    z-index: 10;
     font-size: 14px;
     border-radius: 3px;
     background: rgba(24, 106, 212, 0.301);
     color: white;
+}
+.sidebar-btn.active {
+    top: 10px;
+    left: 200px;
 }
 .sidebar-btn:hover {
     background: rgba(24, 105, 212, 0.726);
@@ -31,7 +36,7 @@ a, a:hover, a:focus {
 
 #content {
     padding: 20px;
-    width: calc(100% - 200px);
+    width: 100%;
     height: calc(100vh - 56px);
     max-height: calc(100vh - 56px);
     transition: all 0.3s;
@@ -42,14 +47,14 @@ a, a:hover, a:focus {
 }
 
 #content.active {
-    width: 100%;
+    width: calc(100% - 200px);
 }
 
 #sidebar {
     width: 200px;
     position: fixed;
     top: 56px;
-    left: 0;
+    margin-left: -200px;
     height: 100vh;
     max-height: 100vh;
     overflow-y: scroll;
@@ -61,7 +66,7 @@ a, a:hover, a:focus {
 }
 
 #sidebar.active {
-    margin-left: -200px;
+    margin-left: 0;
 }
 
 #sidebar .sidebar-header {
@@ -166,7 +171,8 @@ color: #aaa;
 }
 
 .post-list {
-    width: 80%;
+    max-width: 780px;
+    width: 100%;
 }
 
 .post-list-item {
@@ -196,21 +202,31 @@ color: #aaa;
 
 /* Media Queries (auto hide sidebars on smaller screen) */
 @media (max-width: 768px) {
-    /* #sidebar {
-        margin-left: -250px;
+    .sidebar-btn {
+        position: relative;
+        left: 0;
     }
+
+    .sidebar-btn.active {
+        position: relative;
+        left: 200px;
+    }
+
+    .post-list {
+       width: 100%;
+    }
+
     #sidebar.active {
         margin-left: 0;
-    } 
-    #content.active {
-        width: calc(100% - 250px);
     }
-    */
-    .post-list {
-       max-width: 800px;
+    #sidebar {
+        margin-left: -250px;
     }
-    
+
     #content {
+        width: 100%;
+    }
+    #content.active {
         width: 100%;
     }
     #sidebarCollapse span {
