--- a/client/assets/css/style.css
+++ b/client/assets/css/style.css
@@ -38,8 +38,13 @@
 }
 .my-card-header {
   color: #616161;
-  font-size: 32px;
-  font-weight: 500;
+  font-size: 26px;
+  font-weight: 600;
+}
+.my-card-content {
+  color: #616161;
+  font-size: 20px;
+  font-weight: 400;
 }
 
 .footer {
