--- a/client/assets/scss/_card.scss
+++ b/client/assets/scss/_card.scss
@@ -29,7 +29,13 @@
 
     &-header {
         color: #616161;
-        font-size: 32px;
-        font-weight: 500;
+        font-size: 26px;
+        font-weight: 600;
+    }
+
+    &-content {
+        color: #616161;
+        font-size: 20px;
+        font-weight: 400;
     }
 }
