--- a/client/assets/css/style.css
+++ b/client/assets/css/style.css
@@ -45,6 +45,9 @@
   color: #616161;
   font-size: 20px;
   font-weight: 400;
+  max-height: 3.3em;
+  max-width: 28em;
+  overflow: hidden;
 }
 
 .footer {
