--- a/client/assets/scss/_tag.scss
+++ b/client/assets/scss/_tag.scss
@@ -6,6 +6,9 @@
     margin-top: 5px;
     padding: 2px 12px;
     margin-right: 8px;
+
+    font-size: 13px;
+    padding: 2px 8px;
     
     >.remove-tag {
         cursor: pointer;
