--- a/client/assets/css/style.css
+++ b/client/assets/css/style.css
@@ -46,7 +46,7 @@
   font-size: 20px;
   font-weight: 400;
   max-height: 3.3em;
-  max-width: 28em;
+  max-width: 40em;
   overflow: hidden;
 }
 
@@ -75,6 +75,8 @@
 }
 
 .list-group {
+  position: fixed;
+  width: 9em;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-direction: column;
@@ -161,7 +163,7 @@
 }
 
 .sidebar--container {
-  min-height: 100vh;
+  width: 10em;
   margin-left: -12.5em;
   -webkit-transition: margin 0.25s ease-out;
   -moz-transition: margin 0.25s ease-out;
@@ -169,7 +171,7 @@
   transition: margin 0.25s ease-out;
 }
 .sidebar__heading {
-  padding: 1.68rem 2.1rem;
+  padding: 1rem 2.1rem;
   font-size: 1.2rem;
 }
 .sidebar .list-group {
@@ -188,6 +190,8 @@
   margin-top: 5px;
   padding: 2px 12px;
   margin-right: 8px;
+  font-size: 13px;
+  padding: 2px 8px;
 }
 .tag > .remove-tag {
   cursor: pointer;
