--- a/client/html/css/style.css
+++ b/client/html/css/style.css
@@ -32,13 +32,13 @@ nav{
 #sidebar{
     position: fixed;
     height: 100%;
-    background-color: #6A8DAD;
+    background-color: rgba(182, 165, 165, 0.5);
     font-size: 24px;
     line-height: 2;
 }
 
 .sidebar-heading{
-    color: antiquewhite
+    color: rgb(44, 58, 71);
 }
 
 nav #logo img{
