--- a/client/css/style.css
+++ b/client/css/style.css
@@ -24,7 +24,8 @@ body {
     /* background: linear-gradient( to bottom,rgba(0,0,0,.8), rgba(0,0,0,.5)), url('https://images.unsplash.com/photo-1478109562701-8d261b58b09d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80') center no-repeat; */
     background-color: #016087;
     background-size: cover;
-    color: white
+    color: white;
+
 }
 
 .container {
@@ -70,6 +71,10 @@ nav ul li a {
 
 nav ul li a:last-child{
     margin-right: 5rem;
+}
+
+nav ul li a:first-child{
+  font-size: 14px;
 }
 
 
@@ -296,4 +301,38 @@ nav ul li a:hover::after {
     border: none;
   }
   
-  
+.fade-enter-active, .fade-leave-active {
+  transition: opacity .5s;
+}
+.fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
+  opacity: 0;
+}
+
+#tags a {
+  border-radius: 5px; 
+  background-color: #d52c82; 
+  color: white;
+  font-weight: 400
+}
+
+/* Enter and leave animations can use different */
+/* durations and timing functions.              */
+.slide-fade-enter-active {
+  transition: all .3s ease;
+}
+.slide-fade-enter, .slide-fade-leave-to
+/* .slide-fade-leave-active below version 2.1.8 */ {
+  transform: translateX(10px);
+  opacity: 0;
+}
+
+#no-data {
+  font-size: 26px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  left: 60%;
+  top: 68%;
+  font-weight: 500
+}
