--- a/client/style.css
+++ b/client/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #e9e9e9;
+    background-color: #dfdfdf;
     min-height: 100vh; 
 }
 
@@ -13,12 +13,25 @@ body {
 }
 
 .user-photo {
-    width: 2rem;
-    height: 2rem;
+    width: 2.1rem;
+    height: 2.1rem;
     margin-left: 0;
     margin-right: 0;
     border: 1px solid black;
     border-radius: 50%;
+}
+
+.user-change-photo {
+    width: 3rem;
+    height: 3rem;
+    margin: 0.8rem 0.7rem 0.8rem 0.2rem;
+    border: 1px solid #2e3135;
+    border-radius: 50%;
+}
+
+.user-change-photo:hover {
+    cursor: pointer;
+    /* shadow: 0  */
 }
 
 .nav-item.nav-link {
@@ -26,11 +39,21 @@ body {
     font-size: 0.95rem;
 }
 
+#registerbutton {
+    margin-right: 0.6rem;
+}
+
 #writebutton {
     padding: 0.3rem 1rem;
     border: 1px solid #2e3135;
-    margin-right: 1.2rem;
+    margin-right: 1rem;
     color: #2e3135;
+}
+
+#frontpage-message, #entrance-message {
+    margin-top: 5.5rem;
+    font-size: 1.8rem;
+    text-align: center;
 }
 
 #navcol {
@@ -43,6 +66,7 @@ body {
     min-width: 7rem;
     background-color: #ffffff;
     float: left;
+    box-shadow: -1px 0 11px #2e3135;
 }
 
 .nav-item.sidebar-item {
@@ -50,7 +74,7 @@ body {
 }
 
 .nav-item.sidebar-item:hover {
-    background-color: #79d695;
+    background-color: #81b6f1;
     cursor: pointer;
 }
 
@@ -70,6 +94,10 @@ body {
     text-decoration: none;
 }
 
+#register-form, #login-form {
+    margin-top: 5rem;
+}
+
 #main {
     margin-left: 15%;
     height: 100vh;
@@ -77,11 +105,32 @@ body {
 }
 
 #editor-area {
-    max-width: 1000px;
-    min-width: 400px;
+    max-width: 900px;
+    min-width: 350px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 5rem;
+    margin-top: 3.2rem;
+    padding: 0.8rem 1.6rem;
+    padding-bottom: 0.2rem;
+    background-color: #fff;
+}
+
+#titleinput {
+    background: transparent;
+    border: none;
+    width: 100%;
+    font-size: 1.8rem;
+    margin-left: 0.3rem;
+    margin-bottom: 0.6rem;
+}
+
+#titleinput:focus {
+    outline-color: transparent;
+    outline-style: none;
+}
+
+#my-articles {
+    margin-top: 4.2rem;
     padding-left: 1.8rem;
     padding-right: 1.8rem;
 }
@@ -90,7 +139,7 @@ body {
     min-height: 390px;
 }
 
-@media only screen and (max-width: 806px) {
+@media only screen and (max-width: 820px) {
     #sidenav #navcol{
         display: none;
     }
@@ -98,4 +147,58 @@ body {
     #main {
         margin-left: 0;
     }
-} 
+}
+
+#article-search-container {
+    min-width: 350px;
+    max-width: 900px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 1rem;
+}
+
+#article-search {
+    width: 34%;
+    min-width: 14rem;
+}
+
+#article-card {
+    min-width: 350px;
+    max-width: 900px;
+    height: 7.6rem;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0.8rem;
+    background-color: #fff;
+    overflow: hidden;
+}
+
+.featured-image-preview {
+    background-color: black;
+    width: 8rem;
+    height: 6rem;
+}
+
+#popup {
+    position:absolute;
+    top:50%;
+    left:50%;
+    width:420px;
+    height:280px;
+    padding: 1rem;
+    margin-left:-210px;
+    margin-top:-140px;
+    background-color: #d85847;
+    z-index: 3;
+}
+
+#account-page {
+    margin-top: 4.8rem;
+    max-width: 900px;
+    min-width: 350px;
+    padding-left: 1.8rem;
+    padding-right: 1.8rem;
+    margin-left: auto;
+    margin-right: auto;
+    padding-bottom: 0.2rem;
+}
