--- a/client/css/style.css
+++ b/client/css/style.css
@@ -10,6 +10,10 @@ nav{
     background-color: #7EC4E2;
     font-size: 30px;
 }
+#form-register, #form-login, #awal{
+    background-image: url('../assets/bg.png');
+    height: 100vh;
+}
 #sidebar{
     background-color:rgb(99, 173, 204);
     position: fixed;
