--- a/client/css/style.css
+++ b/client/css/style.css
@@ -6,10 +6,21 @@
 
   body {
     overflow-x:hidden;
-    padding-top: 49px;
+    padding-top: 50px;
     padding-bottom: 50px;
   }
   .navbar{
     background-color:#286087;
+    z-index: 9;
+  }
+ 
+  #searchtag input[type=text] {
+    width: 130px;
+    -webkit-transition: width 0.4s ease-in-out;
+    transition: width 0.4s ease-in-out;
   }
   
+  /* When the input field gets focus, change its width to 100% */
+ #searchtag input[type=text]:focus {
+    width: 100%;
+  }
